--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
     implementation 'com.makeramen:roundedimageview:2.2.1'
+    implementation 'com.baoyz.swipemenulistview:library:1.3.0'
+    implementation 'com.yanzhenjie:recyclerview-swipe:1.1.4'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+
 
 
 }
