--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="big.work.GroupItem1Activity"></activity>
+        <activity android:name="big.work.NewFriendItem2Activity"></activity>
+        <activity android:name="big.work.NewFriendItem1Activity" />
+        <activity android:name="big.work.GroupItem1Activity" />
         <activity android:name="big.work.FriendsItem2Activity" />
         <activity android:name="big.work.FriendsItem1Activity" />
         <activity android:name="big.work.MemberActivity" />
